# onclave

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  README.md  bunfig.toml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.example.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
docker/: .env.example  (+2 more)
services/menos/: .gitignore  Dockerfile  pyproject.toml
services/menos/.claude/: CLAUDE.md
services/menos/.claude/rules/: architecture.md  deployment.md  troubleshooting.md
services/menos/.claude/skills/: commit-semver.md  surrealdb.md
services/menos/menos/: __init__.py  config.py  main.py
services/menos/menos/auth/: dependencies.py  signature.py
services/menos/menos/client/: __init__.py
services/menos/migrations/: 20260201-100000_initial_schema.surql  20260201-160600_add_link_edge_table.surql  20260201-180000_add_entity_tables.surql  20260210-120000_add_classification_fields.surql  20260211-120100_pipeline_job.surql  20260212-140000_create_tag_alias_table.surql  20260214-040000_rename_tag_alias_count.surql  20260215-120000_annotation_parent_index.surql  20260216-010100_delete_stale_duplicates.surql  20260721-000000_initial_schema.sql
services/menos/scripts/: classify_content.py  classify_transcript.py  delete_video.py  eval_retrieval.py  export_summaries.py  fetch_video.py  filter_description_urls.py  list_videos.py  migrate.py  query.py  refetch_metadata.py  refetch_selected.py  reprocess_content.py  search_videos.py  url_filter_status.py
services/menos/tests/: compose.postgres.yaml  conftest.py
(+637 files in other folders)
